Fixed Image resizing and overflow

--- a/style.css
+++ b/style.css
@@ -1,18 +1,40 @@
 body {
-    background: #1e3c72;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-    
+    background: #1e3c72;
+    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);
+    background: linear-gradient(to right, #2a5298, #1e3c72);
 }
 .container {
     width: 100%;
     margin: 0 auto;
     text-align: center;
-
 }
-
 #logoImage {
     height: 800px;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 850px){
+    #logoImage {
+        height: 600px;
+    }
+    body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
+}
+
+@media screen and (max-width: 550px){
+    #logoImage {
+        height: 400px;
+    }
+    body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
 }
